PTGY: Fix Docker Build

--- a/pythology/pipeline/extract/Dockerfile
+++ b/pythology/pipeline/extract/Dockerfile
@@ -5,19 +5,19 @@ ARG API_VERSION=v1
 
 WORKDIR /builder
 
-# Install pip-tools to compile requirements
 RUN pip install --no-cache-dir pip-tools
 
-# Copy all requirements.in files
-COPY pipeline/extract/requirements.in ./extractor-requirements.in
-COPY common/api/${API_VERSION}/requirements.in ./api-${API_VERSION}-requirements.in
-COPY common/utils/requirements.in ./utils-requirements.in
+COPY pipeline/extract/requirments.in ./extractor-requirments.in
+COPY common/api/${API_VERSION}/requirments.in ./api-${API_VERSION}-requirments.in
+COPY common/utils/requirments.in ./utils-requirments.in
 
-# Combine all requirements.in into one master.in
-RUN cat extractor-requirements.in api-${API_VERSION}-requirements.in utils-requirements.in > combined.in
+RUN cat extractor-requirments.in > combined.in
+RUN echo >> combined.in  # Add a blank line
+RUN cat api-${API_VERSION}-requirments.in >> combined.in
+RUN echo >> combined.in  # Add another blank line
+RUN cat utils-requirments.in >> combined.in
 
-# Compile into final requirements.txt
-RUN pip-compile combined.in --output-file=requirements.txt
+RUN pip-compile combined.in --output-file=requirements.txt --strip-extras
 
 FROM python:${PYTHON}-slim
 
@@ -32,10 +32,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY --chown=1000:1000 common/api/${API_VERSION} common/api/${API_VERSION}
 COPY --chown=1000:1000 common/utils common/utils
-COPY --chown=1000:1000 pipeline/extract/reddit/ reddit/
+COPY --chown=1000:1000 pipeline/extract/reddit reddit/
 COPY --chown=1000:1000 pipeline/extract/extractor.py .
 COPY --chown=1000:1000 --chmod=755 pipeline/extract/main.py .
 
 USER 1000
 
-CMD ["python3", "main.py"]
+CMD ["python", "main.py"]
